Update title and project status in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vitor Gabriel | IA & Machine Learning</title>
+  <title>Vitor Gabriel | Data, IA & Machine Learning</title>
   <meta name="description" content="Portfólio de Vitor Gabriel — Machine Learning aplicado à previsão e automação de decisões." />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -24,13 +24,12 @@
     <!-- HERO -->
     <section class="hero">
       <div class="hero-left">
-        <p class="pill">IA aplicada • Machine Learning • Automação</p>
+        <p class="pill">IA aplicada • Machine Learning • Automação • Análise de dados</p>
         <h1>
           Construo modelos para <span class="accent">prever</span> e <span class="accent">automatizar</span> decisões.
         </h1>
         <p class="subtitle">
           Portfólio focado em ML aplicado com projetos práticos e explicações técnicas claras.
-          Atualmente construindo um projeto de futebol (Brasileirão/Corinthians).
         </p>
 
         <div class="cta">
@@ -70,7 +69,6 @@
             <span class="tag">matplotlib</span>
           </div>
           <div class="card-actions">
-            <!-- TROQUE o link abaixo pelo repositório certo do projeto -->
             <a class="btn small primary" href="https://github.com/vitorgabriel100/ml-player-performance" target="_blank" rel="noreferrer">Ver repo</a>
             <span class="muted">Pronto</span>
           </div>
@@ -153,7 +151,7 @@
           </div>
           <div class="proj-actions">
             <a class="btn small primary" href="https://github.com/vitorgabriel100/ml-brasileirao-corinthians" target="_blank" rel="noreferrer">Ver no GitHub</a>
-            <span class="muted">Em desenvolvimento</span>
+            <span class="muted">Pronto</span>
           </div>
         </article>
 
@@ -171,21 +169,6 @@
           <div class="proj-actions">
             <a class="btn small primary" href="https://github.com/vitorgabriel100/ml-player-performance" target="_blank" rel="noreferrer">Ver no GitHub</a>
             <span class="muted">Pronto</span>
-          </div>
-        </article>
-
-        <article class="proj glass">
-          <div class="proj-top">
-            <h3>📈 Comparação de modelos — desempenho de jogadores</h3>
-            <p>Experimentos com regressão/validação para comparar modelos e interpretar métricas.</p>
-          </div>
-          <div class="tags">
-            <span class="tag">Regressão</span>
-            <span class="tag">Validação</span>
-            <span class="tag">Interpretação</span>
-          </div>
-          <div class="proj-actions">
-            <span class="muted">Em breve</span>
           </div>
         </article>
 
