Update project details for Demand Forecasting

--- a/index.html
+++ b/index.html
@@ -174,16 +174,20 @@
 
         <article class="proj glass">
           <div class="proj-top">
-            <h3>⚙️ Automação de pipeline de ML</h3>
-            <p>Script/CLI para automatizar coleta, treino, avaliação e geração de relatório.</p>
+            <h3>📊 Previsão de Demanda — Service Desk</h3>
+            <p>
+               Previsão do volume diário de chamados com comparação entre baselines clássicos e modelo de Machine Learning (Random Forest), usando validação temporal.
+            </p>
           </div>
           <div class="tags">
-            <span class="tag">Automação</span>
-            <span class="tag">Relatórios</span>
-            <span class="tag">Reprodutibilidade</span>
+            <span class="tag">Time Series</span>
+            <span class="tag">Baseline</span>
+            <span class="tag">Random Forest</span>
+            <span class="tag">ML aplicado</span>
           </div>
           <div class="proj-actions">
-            <span class="muted">Em breve</span>
+            <a class="btn small primary" href="https://github.com/vitorgabriel100/service-desk-demand-forecast" target="_blank" rel="noreferrer"> Ver no GitHub</a>
+            <span class="muted">Pronto</span>
           </div>
         </article>
       </div>
