Change emoji from soccer to diamond in headings

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="hero-right">
         <div class="card glass">
           <div class="card-title">Em destaque</div>
-          <h3>⚽ Evolução de desempenho — Lamine Yamal</h3>
+          <h3>💎 Evolução de desempenho — Lamine Yamal</h3>
           <p>
             Análise por temporada do (xG90 + xA90) com pipeline em Python, engenharia de features e regressão linear
             como ferramenta analítica.
@@ -157,7 +157,7 @@
 
         <article class="proj glass">
           <div class="proj-top">
-            <h3>📊 Evolução ofensiva por temporada — Lamine Yamal</h3>
+            <h3>💎 Evolução ofensiva por temporada — Lamine Yamal</h3>
             <p>Análise de (xG90 + xA90) com tratamento estatístico, feature engineering e regressão linear como apoio interpretativo.</p>
           </div>
           <div class="tags">
